# shooter-game

./: Cargo.toml  config.toml  flake.nix  layout.kdl
assets/shaders/: common.wgsl  cubemap_unlit.wgsl  instancing.wgsl  main_material.wgsl  skybox.wgsl
src/: critter.rs  instance.rs  main.rs  main_material.rs  skybox.rs
